Finished Restaurant and Menu registration
